CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.19

	- The USB backend didn't sort the devices entries, so it
	  could associate the wrong serial number with a
	  printer.
	- The pstops filter didn't handle page ranges properly
	  when a page contained an embedded document.
	- Added a partial translation of the web interface to
	  German.
	- When printing using the OutputOrder=Reverse option
	  with duplexing, the output order is now truly
	  reversed; the order of sub-pages when printing N-up is
	  the same.
	- The pstops filter did not always output the extra
	  blank page when printing a document with an odd number
	  of pages with duplexing enabled.
	- The ippAddXYZ functions no longer allow the
	  application to add less than 1 value.
	- Fixed a URL rewrite bug in the web interface - local
	  access was sometimes redirected away from localhost...
	- The ppdOpen() functions could get in an infinite loop
	  if the PPD file contained a keyword or text that was
	  too large for the buffer.
	- Added preliminary support for GNU TLS; patch provided
	  by Jeff Licquia.
	- Now timeout IPP attribute reads after 1 second inside
	  an attribute definition.
	- Now timeout connections that have been shutdown (due
	  to errors) after 30 seconds instead of the Timeout
	  setting (300 seconds by default).  This provides
	  faster recovery from DoS attacks.
	- A denial-of-service attack warning message was being
	  written to the log files by the scheduler for every
	  detection.  This caused a DoS of its own in some
	  situations. The warning message is now written no more
	  than once per minute.
	- Fixed the CIE colorspace support code in the image and
	  PS RIPs.
	- The job-quota-period, job-page-limit, and job-k-limit
	  attributes were not flagged as integers, so setting
	  quotas would not work.
	- Added an additional response check in the scheduler to
	  more quickly recover from denial-of-service attacks.
	- The cupstestppd file was incorrectly installed in the