@@ -1,5 +1,5 @@
 /*
- * "$Id: socket.c,v 1.17.2.10 2003/01/07 18:26:16 mike Exp $"
+ * "$Id: socket.c,v 1.17.2.11 2003/01/23 16:27:17 mike Exp $"
  *
  *   AppSocket backend for the Common UNIX Printing System (CUPS).
  *
@@ -167,7 +167,7 @@ main(int  argc,		/* I - Number of command-line arguments (6 or 7) */
   if ((hostaddr = httpGetHostByName(hostname)) == NULL)
   {
     fprintf(stderr, "ERROR: Unable to locate printer \'%s\' - %s\n",
-            hostname, strerror(errno));
+            hostname, hstrerror(h_errno));
     return (1);
   }
 
@@ -359,5 +359,5 @@ main(int  argc,		/* I - Number of command-line arguments (6 or 7) */
 
 
 /*
- * End of "$Id: socket.c,v 1.17.2.10 2003/01/07 18:26:16 mike Exp $".
+ * End of "$Id: socket.c,v 1.17.2.11 2003/01/23 16:27:17 mike Exp $".
  */
